--- a/app/src/main/res/values-land/integers.xml
+++ b/app/src/main/res/values-land/integers.xml
@@ -3,4 +3,5 @@
     <integer name="main_columns">4</integer>
     <integer name="columns_bookmark">2</integer>
     <integer name="columns_similar">6</integer>
+    <integer name="columns_credits">6</integer>
 </resources>
