--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -37,7 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/common_margin_default"
-            android:layout_marginTop="@dimen/common_margin_min"
+            android:layout_marginVertical="@dimen/common_margin_default"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintEnd_toStartOf="@+id/linear_share"
@@ -68,7 +68,7 @@
             android:id="@+id/linear_share"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_margin_min"
+            android:layout_marginVertical="@dimen/common_margin_default"
             android:layout_marginEnd="@dimen/common_margin_default"
             android:gravity="center"
             android:orientation="vertical"
@@ -129,9 +129,9 @@
             android:layout_width="120dp"
             android:layout_height="170dp"
             android:layout_marginStart="@dimen/common_margin_default"
-            android:layout_marginBottom="@dimen/common_margin_min"
             android:clipToPadding="true"
             app:cardCornerRadius="@dimen/common_corner_min"
+            app:layout_constraintTop_toBottomOf="@id/frameLayout"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent">
 
@@ -150,7 +150,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="438dp" />
+            app:layout_constraintGuide_begin="460dp" />
 
         <TextView
             android:id="@+id/txt_movie_title"
@@ -171,7 +171,7 @@
             android:id="@+id/txt_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_margin_min"
+            android:layout_marginTop="@dimen/common_margin_default"
             android:drawablePadding="@dimen/common_padding_min"
             android:gravity="center"
             android:textColor="@color/green_met"
@@ -242,32 +242,51 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/common_margin_min"
-                android:layout_weight=".5"
+                android:layout_weight=".3"
                 android:background="@color/black_dense"
                 android:fontFamily="@font/poppins_regular"
                 android:gravity="center"
                 android:padding="@dimen/common_padding_default"
                 android:text="@string/overview"
                 android:textColor="@color/white"
-                android:textSize="@dimen/common_size_default"
+                android:textSize="@dimen/common_size_detail_movie"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline" />
 
             <TextView
+                android:id="@+id/txt_title_credits"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/common_margin_min"
+                android:layout_weight=".3"
+                android:background="@color/black_dense"
+                android:fontFamily="@font/poppins_regular"
+                android:gravity="center"
+                android:padding="@dimen/common_padding_default"
+                android:text="@string/credits"
+                android:textColor="@color/grey_dark"
+                android:textSize="@dimen/common_size_detail_movie"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline" />
+
+
+            <TextView
                 android:id="@+id/txt_title_similar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/common_margin_min"
-                android:layout_weight=".5"
+                android:layout_weight=".3"
                 android:background="@color/black_dense"
                 android:fontFamily="@font/poppins_regular"
                 android:gravity="center"
                 android:padding="@dimen/common_padding_default"
                 android:text="@string/similar"
                 android:textColor="@color/grey_dark"
-                android:textSize="@dimen/common_size_default"
+                android:textSize="@dimen/common_size_detail_movie"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -275,12 +294,22 @@
         </LinearLayout>
 
         <View
-            android:id="@+id/divider_line_2"
+            android:id="@+id/divider_line_1"
             android:layout_width="0dp"
             android:layout_height="4dp"
             android:background="@color/white"
-            app:layout_constraintEnd_toStartOf="@id/divider_line_3"
+            app:layout_constraintEnd_toStartOf="@id/divider_line_2"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linear_option"
+            tools:ignore="MissingConstraints" />
+
+        <View
+            android:id="@+id/divider_line_2"
+            android:layout_width="0dp"
+            android:layout_height="4dp"
+            android:background="@color/grey_dark"
+            app:layout_constraintEnd_toStartOf="@id/divider_line_3"
+            app:layout_constraintStart_toEndOf="@id/divider_line_1"
             app:layout_constraintTop_toBottomOf="@id/linear_option"
             tools:ignore="MissingConstraints" />
 
@@ -322,6 +351,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linear_option"
             tools:listitem="@layout/item_movie_row" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_movies_credits"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/common_margin_default"
+            android:layout_marginTop="@dimen/common_margin_default"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linear_option"
+            tools:listitem="@layout/item_movie_credits" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
@@ -387,7 +430,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <ProgressBar
-            android:id="@+id/progressBar"
+            android:id="@+id/progressbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
@@ -395,6 +438,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/progressbar_option"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/common_margin_max"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider_line_1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
