--- a/app/src/main/res/layout-land/fragment_similar_detail.xml
+++ b/app/src/main/res/layout-land/fragment_similar_detail.xml
@@ -312,7 +312,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/common_margin_default"
-            android:layout_marginTop="@dimen/common_margin_default"
             android:orientation="vertical"
             android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -326,7 +325,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/common_margin_default"
-            android:layout_marginTop="@dimen/common_margin_default"
             android:orientation="vertical"
             android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -334,6 +332,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linear_option"
             tools:listitem="@layout/item_movie_credits" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_movies_crew"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/common_margin_item_movie"
+            android:layout_marginVertical="@dimen/common_margin_default"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rv_movies_credits"
+            tools:listitem="@layout/item_movie_crew" />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/mcv_home_page"
