--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -4,4 +4,5 @@
     <integer name="columns_bookmark">1</integer>
     <integer name="columns_similar">3</integer>
     <integer name="columns_credits">3</integer>
+    <integer name="columns_crew">1</integer>
 </resources>
