--- a/app/src/main/res/layout-land/fragment_similar_detail.xml
+++ b/app/src/main/res/layout-land/fragment_similar_detail.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.view.detail.DetailFragment">
+        tools:context=".ui.fragments.detail.DetailFragment">
 
         <FrameLayout
             android:id="@+id/frameLayout"
