--- a/app/src/main/res/layout/fragment_gallery_loading.xml
+++ b/app/src/main/res/layout/fragment_gallery_loading.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.activities.main.MainActivity">
 
     <FrameLayout
         android:id="@+id/title_upcoming_loading"
