--- a/app/src/main/res/layout/fragment_home_loading.xml
+++ b/app/src/main/res/layout/fragment_home_loading.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".ui.view.main.HomeFragment">
+    tools:context=".ui.fragments.home.HomeFragment">
 
     <LinearLayout
         android:id="@+id/img_carousel_loading"
