--- a/app/src/main/res/layout/item_movie_credits.xml
+++ b/app/src/main/res/layout/item_movie_credits.xml
@@ -6,9 +6,9 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/common_margin_item_movie"
     android:layout_marginVertical="@dimen/common_margin_item_movie"
+    android:backgroundTint="@color/black_dense"
     app:cardCornerRadius="@dimen/common_corner_default"
-    app:cardElevation="@dimen/common_corner_min"
-    android:backgroundTint="@color/black_dense">
+    app:cardElevation="@dimen/common_corner_min">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -20,12 +20,12 @@
             android:layout_height="130dp"
             android:layout_marginHorizontal="@dimen/common_margin_min"
             android:layout_marginTop="@dimen/common_margin_min"
-            app:cardCornerRadius="@dimen/common_corner_default"
             android:backgroundTint="@color/black_dense"
-            app:layout_constraintStart_toStartOf="parent"
+            app:cardCornerRadius="@dimen/common_corner_default"
+            app:layout_constraintBottom_toTopOf="@id/txt_name"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/txt_name">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/img_character"
@@ -41,12 +41,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/common_margin_min"
-            android:maxLines="1"
-            android:textSize="@dimen/common_size_detail_attributes"
-            android:textColor="@color/white"
-            android:textStyle="bold"
             android:ellipsize="end"
             android:gravity="center"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textSize="@dimen/common_size_detail_attributes"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/mcv_credits"
             app:layout_constraintStart_toStartOf="@id/mcv_credits"
@@ -58,11 +58,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/common_margin_min"
-            android:maxLines="1"
-            android:textSize="@dimen/common_size_middle"
-            android:textColor="@color/white"
             android:ellipsize="end"
             android:gravity="center"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textSize="@dimen/common_size_middle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/mcv_credits"
             app:layout_constraintStart_toStartOf="@id/mcv_credits"
