--- a/app/src/main/res/layout/item_movie_search.xml
+++ b/app/src/main/res/layout/item_movie_search.xml
@@ -6,9 +6,9 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="@dimen/common_margin_default"
     android:layout_marginVertical="@dimen/common_margin_min"
+    android:backgroundTint="@color/black_dense"
     app:cardCornerRadius="@dimen/common_corner_default"
-    app:cardElevation="@dimen/common_corner_min"
-    android:backgroundTint="@color/black_dense">
+    app:cardElevation="@dimen/common_corner_min">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -19,8 +19,8 @@
             android:layout_width="100dp"
             android:layout_height="130dp"
             android:layout_margin="@dimen/common_margin_min"
-            app:cardCornerRadius="@dimen/common_corner_default"
             android:backgroundTint="@color/black_dense"
+            app:cardCornerRadius="@dimen/common_corner_default"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -39,11 +39,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/common_margin_default"
-            android:maxLines="3"
-            android:textSize="@dimen/common_size_title_bookmark"
-            android:textColor="@color/white"
-            android:textStyle="bold"
             android:ellipsize="end"
+            android:maxLines="3"
+            android:textColor="@color/white"
+            android:textSize="@dimen/common_size_title_bookmark"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/mcv_movie"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/mcv_movie"
