--- a/app/src/main/res/layout-land/fragment_home_loading.xml
+++ b/app/src/main/res/layout-land/fragment_home_loading.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    tools:context=".ui.fragments.home.HomeFragment">
+    android:background="@color/black">
 
     <LinearLayout
         android:id="@+id/img_carousel_loading"
@@ -30,8 +28,8 @@
         android:id="@+id/linear1_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginHorizontal="@dimen/common_margin_middle"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/img_carousel_loading"
         app:layout_constraintTop_toTopOf="@id/img_carousel_loading">
