--- a/app/src/main/res/layout-land/fragment_similar_detail.xml
+++ b/app/src/main/res/layout-land/fragment_similar_detail.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragments.detail.DetailFragment">
+        tools:context=".ui.detail.DetailFragment">
 
         <FrameLayout
             android:id="@+id/frameLayout"
@@ -417,8 +417,8 @@
             android:id="@+id/progressbar_option"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             android:layout_marginTop="@dimen/common_margin_max"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
