--- a/app/src/main/res/layout/fragment_gallery_loading.xml
+++ b/app/src/main/res/layout/fragment_gallery_loading.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    tools:context=".ui.activities.main.MainActivity">
+    android:background="@color/black">
 
     <FrameLayout
         android:id="@+id/title_upcoming_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/common_padding_24"
         android:layout_marginHorizontal="@dimen/common_margin_middle"
         android:layout_marginTop="@dimen/common_margin_min"
         android:background="@color/grey_dark"
+        android:padding="@dimen/common_padding_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,38 +20,38 @@
         android:id="@+id/linear1_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginHorizontal="@dimen/common_margin_min"
         android:layout_marginTop="@dimen/common_margin_default"
-        app:layout_constraintTop_toBottomOf="@id/title_upcoming_loading" >
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/title_upcoming_loading">
 
         <ImageView
             android:layout_width="180dp"
             android:layout_height="300dp"
             android:layout_marginHorizontal="@dimen/common_margin_min"
             android:layout_marginVertical="@dimen/common_margin_default"
-            android:background="@color/grey_dark"/>
+            android:background="@color/grey_dark" />
 
         <ImageView
             android:layout_width="180dp"
             android:layout_height="300dp"
             android:layout_marginHorizontal="@dimen/common_margin_min"
             android:layout_marginVertical="@dimen/common_margin_default"
-            android:background="@color/grey_dark"/>
+            android:background="@color/grey_dark" />
 
         <ImageView
             android:layout_width="180dp"
             android:layout_height="300dp"
             android:layout_marginHorizontal="@dimen/common_margin_min"
             android:layout_marginVertical="@dimen/common_margin_default"
-            android:background="@color/grey_dark"/>
+            android:background="@color/grey_dark" />
 
         <ImageView
             android:layout_width="180dp"
             android:layout_height="300dp"
             android:layout_marginHorizontal="@dimen/common_margin_min"
             android:layout_marginVertical="@dimen/common_margin_default"
-            android:background="@color/grey_dark"/>
+            android:background="@color/grey_dark" />
 
     </LinearLayout>
 
@@ -61,37 +59,37 @@
         android:id="@+id/linear2_loading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginHorizontal="@dimen/common_margin_min"
-        app:layout_constraintTop_toBottomOf="@id/linear1_loading" >
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/linear1_loading">
 
         <ImageView
             android:layout_width="180dp"
             android:layout_height="300dp"
             android:layout_marginHorizontal="@dimen/common_margin_min"
             android:layout_marginVertical="@dimen/common_margin_default"
-            android:background="@color/grey_dark"/>
+            android:background="@color/grey_dark" />
 
         <ImageView
             android:layout_width="180dp"
             android:layout_height="300dp"
             android:layout_marginHorizontal="@dimen/common_margin_min"
             android:layout_marginVertical="@dimen/common_margin_default"
-            android:background="@color/grey_dark"/>
+            android:background="@color/grey_dark" />
 
         <ImageView
             android:layout_width="180dp"
             android:layout_height="300dp"
             android:layout_marginHorizontal="@dimen/common_margin_min"
             android:layout_marginVertical="@dimen/common_margin_default"
-            android:background="@color/grey_dark"/>
+            android:background="@color/grey_dark" />
 
         <ImageView
             android:layout_width="180dp"
             android:layout_height="300dp"
             android:layout_marginHorizontal="@dimen/common_margin_min"
             android:layout_marginVertical="@dimen/common_margin_default"
-            android:background="@color/grey_dark"/>
+            android:background="@color/grey_dark" />
 
     </LinearLayout>
 
