--- a/app/src/main/res/layout/row_top_rated_movie.xml
+++ b/app/src/main/res/layout/row_top_rated_movie.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="@dimen/common_padding_min"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/common_padding_min">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/top_rated"
-        android:textStyle="bold"
+        android:textColor="@color/yellow"
         android:textSize="@dimen/common_size_default"
-        android:textColor="@color/yellow"/>
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_top_rated_movies"
@@ -21,6 +21,6 @@
         android:layout_height="160dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_movie_row"/>
+        tools:listitem="@layout/item_movie_row" />
 
 </LinearLayout>
