Improved error handling in Detail (option titles) and refactoring land orientation

--- a/app/src/main/res/layout/error_container.xml
+++ b/app/src/main/res/layout/error_container.xml
@@ -55,7 +55,7 @@
             android:background="@drawable/rounded_corners"
             android:clickable="true"
             android:focusable="true"
-            android:text="Retry"
+            android:text="@string/update"
             android:textAlignment="center"
             android:textSize="@dimen/common_size_detail_attributes" />
 
