--- a/app/src/main/res/layout-land/fragment_detail.xml
+++ b/app/src/main/res/layout-land/fragment_detail.xml
@@ -403,6 +403,18 @@
 
         </com.google.android.material.card.MaterialCardView>
 
+        <include
+            android:id="@+id/container_error"
+            layout="@layout/error_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/common_margin_default"
+            android:layout_marginVertical="@dimen/common_margin_min"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/divider_line_1" />
+
         <ProgressBar
             android:id="@+id/progressbar"
             android:layout_width="wrap_content"
