Injection dispatcher in viewmodels and refactornigs minor(background of ImageView)

--- a/app/src/main/res/layout/item_movie_row.xml
+++ b/app/src/main/res/layout/item_movie_row.xml
@@ -22,6 +22,7 @@
             android:layout_height="match_parent"
             android:contentDescription="@string/movie_item"
             android:scaleType="centerCrop"
+            android:background="@color/black_dense"
             android:src="@mipmap/ic_launcher" />
 
     </androidx.cardview.widget.CardView>
